<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_theme2"
    android:foregroundTint="#00BCD4"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="71dp"
        android:layout_marginStart="68dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#F8F5F5"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/parent"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="132dp"

        android:background="@drawable/round_button"
        android:text="@string/parent"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/teacher"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/teacher"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="132dp"

        android:background="@drawable/round_button"
        android:text="@string/teacher"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="298dp"
        android:layout_height="0dp"
        android:layout_marginBottom="200dp"
        android:text="@string/keep_me_logged_in"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/reghere"
        android:layout_width="123dp"
        android:layout_height="21dp"
        android:layout_marginBottom="24dp"
        android:contextClickable="true"
        android:text="@string/register_here"
        android:textColor="#FCFCFD"
        android:textColorHint="#FAFAFB"
        android:textColorLink="#F5F6F8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="308dp"
        android:layout_height="215dp"

        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>