<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="420dp"
                android:freezesText="true"
                android:hint="@string/full_name" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="340dp"

                android:text="Upload Photo" />

            <EditText
                android:id="@+id/school"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="500dp"
                android:hint="@string/school"
                android:freezesText="true"/>
            <EditText
                android:id="@+id/parent"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="580dp"
                android:hint="@string/name_of_parent"
                android:freezesText="true"
                />
            <EditText
                android:id="@+id/occParent"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="660dp"
                android:freezesText="true"
                android:hint="@string/occupation_of_parent"/>
            <EditText
                android:id="@+id/address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="740dp"
                android:freezesText="true"
                android:hint="@string/Address"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="460dp"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="40dp"
                android:contextClickable="false"
                android:elegantTextHeight="false"
                android:text="  Registration Form"
                android:textColor="#3F51B5"
                android:textColorHint="#500FC3"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/studentImage"
                android:layout_width="180dp"
                android:layout_height="193dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="145dp"

                app:srcCompat="@drawable/camera_logo" />

            <EditText
                android:id="@+id/mobNo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="820dp"
                android:ems="10"
                android:inputType="number"
                android:freezesText="true"
                android:hint="@string/whats_app_no"/>


            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="900dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                 />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="980dp"
                android:ems="10"
                android:hint="Set password"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/std"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="1220dp"
                android:entries="@array/std"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="1270dp"
                android:text="Please tick the below checkbox before submitting form"/>

            <Spinner
                android:id="@+id/board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="1080dp"
                android:entries="@array/Board" />

            <Spinner
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="1150dp"
                android:entries="@array/Medium" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="1298dp"
                android:freezesText="true"
                android:text="@string/i_agree_to" />

            <TextView
                android:id="@+id/rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="147dp"
                android:layout_marginTop="1305dp"
                android:text="@string/terms_and_conditions"
                android:textColor="#203FEC"
                android:freezesText="true"
                android:textColorHint="#2843DA" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="147dp"
                android:layout_marginTop="1360dp"
                android:layout_marginBottom="80dp"
                android:text="@string/submit_form" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="1030dp"
                android:ems="10"
                android:text="Password should contain minimum 6 characters" />


        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>