<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsConditions">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="70dp"
                android:contextClickable="false"
                android:elegantTextHeight="false"
                android:text="@string/rules_and_conditions"
                android:textColor="#3F51B5"
                android:textColorHint="#500FC3"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editText6"
                android:layout_width="342dp"
                android:layout_height="673dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Rules" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                android:text="@string/back" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>